# tuple_algebra

./: .gitignore  CMakeLists.txt  NAMESPACE_CONVENTIONS.md  README.md  apply_executor_bindings_fix.ps1  calibration_cmake_fragment.cmake  feature_bridge.h  performance_model_implementation.md  pr1_step1_extractors.patch  pr1_v1_to_v2_review_fixes.patch
.github/workflows/: ci.yml
build_exp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ctdp.sln
build_exp/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  algebra_test.vcxproj  algebra_test.vcxproj.filters  algebra_test[1]_include.cmake  check.vcxproj  check.vcxproj.filters  cmake_install.cmake  core_test.vcxproj  core_test.vcxproj.filters  core_test[1]_include.cmake  ctdp_calibration_test.vcxproj  ctdp_calibration_test.vcxproj.filters  ctdp_phase3_test.vcxproj  ctdp_phase3_test.vcxproj.filters  ctdp_phase6_test.vcxproj  ctdp_phase6_test.vcxproj.filters  graph_hardening_test.vcxproj  (+133 more)
cmake/: FindITT.cmake
cost_models/: cross_validation.h  linear_model.h  model_factory.h  svr_model.h
docs/: adr_interval_rooted_representation_family.md  adr_partition_rooted_tree_canonical.md  architecture.docx  constructor_mapping.md  ctdp_architecture.md  ctdp_graph_architecture_design.md  ctdp_graph_user_guide.md  ctdp_unified_descriptor_model_v4.md  graph_library_reference.docx  sprint4_design.md  weighted_graph_design.md  ~$chitecture.docx
examples/: CHECKLIST.md  CMakeLists.txt  README.md  cache_line_layout.cpp  cache_line_layout.md  calibration_demo.cpp  calibration_main.cpp  calibration_scenarios.h  dep_break_opt.cpp  dep_break_opt.md  example_memory_regime.cpp  example_parser_pipeline.cpp  fix_cacheline.cpp  fix_calibrate_trivial.cpp  fix_counter_profile.cpp  fix_p99_beam_search.cpp  fix_p99_calibration.cpp  fix_p99_svr_search.cpp  gemm_tile_optimisation.cpp  loop_nest_opt.md  matrix_chain_demo.cpp  matrix_chain_et.cpp  pareto_tiling_demo.cpp  per_element_demo.cpp  spmv_benchmark.cc  variadic_reduce.cpp
examples/framework/: cache_line_layout.md  permutation_order_search.cpp
examples/framework/spmv/: CMakeLists.txt  spmv_app_types.h  spmv_bench.h  spmv_correctness.h  spmv_executor_bindings.h  spmv_tridiag_demo.cpp
examples/graph/: CMakeLists.txt  README.md  example_bipartite.cpp  example_coloring.cpp  example_components_scc.cpp  example_min_cut.cpp  example_rcm.cpp  example_shortest_path.cpp  example_topo_sort.cpp
examples/standalone/: cache_line_layout.cpp  cache_size_opt.cpp  cache_size_opt.md  dep_break_opt.cpp  fix_parser_initial.cpp  fix_parser_initial.md  loop_nest_opt.cpp
experiments/fix_calibration/: CMakeLists.txt  README.md
experiments/fix_calibration/common/: baselines.h  beam_search.h  candidate_writer.h  compiled_measurer.h  experiment_config.h  experiment_runner.h  feature_extractors.h  json_report.h  mock_measurer.h  output_table.h  rdtsc_adapter.h  report_types.h  sweep_configs.h
experiments/fix_calibration/programs/: A_p50_baseline.cpp  B_p99_baseline.cpp  C_p99_log_target.cpp  D_p99_count_encoding.cpp  E_p99_transition_encoding.cpp  F_consensus_sweep.cpp
experiments/fix_calibration/results/: .gitignore
experiments/fix_calibration/scripts/: compare_results.py  run_all.sh
experiments/fix_calibration/tests/: test_beam_search.cpp  test_compiled_measurer.cpp  test_extractors.cpp  test_mock_pipeline.cpp  test_output.cpp  test_sweep_configs.cpp
tests/: CMakeLists.txt  CMakeLists.txt.backup  calibration_test.cpp  phase3_test.cpp  phase4_integration_test.cpp  phase5_test.cpp  phase6_test.cpp  test_candidate_traversal.cpp  test_conditional_dim.cpp  test_constrained_search.cpp  test_constraints.cpp  test_cost_models.cpp  test_counted_view.cpp  test_exhaustive_search.cpp  test_fix_bench.cpp  test_fix_dp_search.cpp  test_heterogeneous_space.cpp  test_instantiation.cc  test_integration_fix.cpp  test_integration_gemm.cpp  test_integration_reduction.cpp  test_interval_dp.cpp  test_interval_split_space.cpp  test_memo.cpp  test_ordinal_fix.cpp  test_other_spaces.cpp  test_pareto.cpp  test_partition.cpp  test_per_element_argmin.cpp  test_per_element_space.cpp  test_performance_models.cpp  test_permutation.cpp  test_phase2_strategies.cpp  test_phase3_fix_calibration.cpp  test_reduction_space.cpp  test_reduction_tree_space.cpp  test_select_and_run.cpp  test_solver_concepts.cpp  test_space_parameterised.cpp  test_space_v072.cpp  (+1 more)
tests/algebra/: algebra_test.cc
tests/bench/: test_percentile.cpp  test_perf_counter.cpp
tests/core/: core_test.cc  test_io_lexer.cpp
tests/e2e/: test_matrix_chain_enumeration.cpp  test_matrix_chain_solver.cpp
tests/graph/: graph_hardening_test.cc  graph_step1_test.cc  graph_step2_test.cc  graph_step3_test.cc  graph_step5_test.cc  graph_step6_test.cc  graph_step7_test.cc  test_baseline_standalone.cpp  test_bipartite_matching.cpp  test_capacity_policy.cpp  test_deduction_aliases.cpp  test_engine_integration.cpp  test_full_include.cpp  test_graph_coloring (2).cc  test_graph_coloring.cc  test_graph_hardening_v2.cc  test_graph_io.cpp  test_graph_umbrella.cpp  test_io_layering.cpp  test_merge_rules.cpp  test_new_algos.cpp  test_rcm.cpp  test_red_team.cpp  test_runtime_graph.cpp  test_segmentation_dp.cpp  test_step8_checkpoint.cpp  test_symmetric_graph.cc  test_traits_checkpoint.cpp  test_transforms.cpp  test_weighted_view.cpp
tests/plan/: test_interval_partition_plan.cpp  test_plan_core.cpp
tests/solver/: solver_test.cc  test_all_binary_splits.cpp  test_cost_table_io.cpp  test_interval_rooted_candidate.cpp  test_interval_solver.cpp  test_interval_substrate_canonical.cpp  test_triangular_memo.cpp
tests/solver/cost_models/: reconcile_vs_libsvm.cpp  test_epsilon_svr_full.cpp
tests/space/: test_binary_cut_desc.cpp
tests/spmv/: CMakeLists.txt  test_spmv_app_types.cpp  test_spmv_bench.cpp  test_spmv_schema.cpp
(+243 files in other folders)
